--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SecureX news aggregation service",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test:lint": "eslint --max-warnings 0",
+    "test": "npm run test:lint && jest",
     "upload-coverage": "codecov"
   },
   "dependencies": {
