--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.3.1",
     "jest": "26.6.3",
-    "nock": "13.0.7",
-    "supertest": "6.1.3",
-    "url-pattern": "1.0.3"
+    "supertest": "6.1.3"
   },
   "repository": "threatgrid/securex-news",
   "license": "ISC"
