--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SecureX news aggregation service",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node api/index.js",
     "test:lint": "eslint --max-warnings 0",
     "test": "npm run test:lint && jest",
     "upload-coverage": "codecov"
